# cli-visualizer

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  Makefile  README.md  TODO  configure  install.sh  project_files.cmake  uninstall.sh
examples/: asound_alsa.conf  asound_alsa_with_dmix.conf  asound_pulseaudio.conf  basic_colors  config  ellipse.gif.REMOVED.git-id  ellipse_filled.gif.REMOVED.git-id  lorenz.gif.REMOVED.git-id  lorenz_filled.gif.REMOVED.git-id  mac_osx_config  rainbow  spectrum_basic_colors.gif.REMOVED.git-id  spectrum_blue.gif.REMOVED.git-id  spectrum_falloff_fill.gif.REMOVED.git-id  spectrum_falloff_none.gif.REMOVED.git-id  spectrum_falloff_top.gif.REMOVED.git-id  spectrum_inorder.gif.REMOVED.git-id  spectrum_margin.gif.REMOVED.git-id  spectrum_mono.gif.REMOVED.git-id  spectrum_reversed.gif.REMOVED.git-id  spectrum_sgs_passes.gif.REMOVED.git-id  spectrum_sgs_smoothing.gif.REMOVED.git-id  spectrum_smoothing_none.gif.REMOVED.git-id  spectrum_smoothing_sgs.gif.REMOVED.git-id  spectrum_space_0.gif.REMOVED.git-id  spectrum_stereo.gif.REMOVED.git-id  spectrum_width_5.gif.REMOVED.git-id
perf_tests/: run_perf_tests.cpp
src/: Visualizer.cpp  Visualizer.h  vis.cpp
src/Domain/: ColorDefinition.cpp  ColorDefinition.h  Settings.cpp  Settings.h  VisConstants.h  VisException.cpp  VisException.h  VisTypes.h
src/Source/: AudioSource.cpp  AudioSource.h  MacOsXAudioSource.cpp  MacOsXAudioSource.h  MpdAudioSource.cpp  MpdAudioSource.h  PortAudioSource.cpp  PortAudioSource.h  PulseAudioSource.cpp  PulseAudioSource.h  ShmemAudioSource.cpp  ShmemAudioSource.h
src/Transformer/: BeatBoxesTransformer.cpp  BeatBoxesTransformer.h  CircleTransformer.cpp  CircleTransformer.h  EllipseTransformer.cpp  EllipseTransformer.h  FftwTransformer.cpp  FftwTransformer.h  GenericTransformer.cpp  GenericTransformer.h  LorenzTransformer.cpp  LorenzTransformer.h  MonsterCatTransformer.cpp  MonsterCatTransformer.h  SgsTransformer.cpp  SgsTransformer.h  SpectrumCircleTransformer.cpp  SpectrumCircleTransformer.h  SpectrumTransformer.cpp  SpectrumTransformer.h
src/Utils/: ConfigurationUtils.cpp  ConfigurationUtils.h  Logger.cpp  Logger.h  NcursesUtils.cpp  NcursesUtils.h  Utils.cpp  Utils.h
src/Writer/: GenericWriter.cpp  GenericWriter.h  NcursesWriter.cpp  NcursesWriter.h
tests/: ConfigurationUtilsTest.cpp  NcursesUtilsTest.cpp  UtilsTest.cpp  run_tests.cpp  test_colors.cpp
